# using-cognite-python-sdk

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt  save_this_as_dot_env_file
.github/workflows/: code-quality.yaml
data/: .~lock.populations.csv#  all_countries.csv  events.csv  populations.csv  populations_postprocessed.csv
notebooks/: 1_Authentication.ipynb  2_List_Search_Retrieve.ipynb  3_Create_Update_Insert.ipynb  4_Delete.ipynb  4_Delete_or_Cleanup.ipynb  Hands-On-Exercise.ipynb  README.md  Solution - Hands On Exercise.ipynb  section_problems_notebook.ipynb  test_Authentication.ipynb  using_cognite_python_sdk.ipynb
utils/: auth.py  cognite_auth.py
