[tool.poetry]
name = "using-cognite-python-sdk"
version = "0.1.0"
description = ""
authors = ["Cognite <academy@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cognite-sdk = ">=6"
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
